--- a/TP1/backend-api/src/main/resources/application.yml
+++ b/TP1/backend-api/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
     open-in-view: true
   datasource:
     url: jdbc:postgresql://tp1-db:5432/db
-    username: usr
-    password: pwd
+    username: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
     driver-class-name: org.postgresql.Driver
 management:
  server:
