--- a/TP1/http-server/Dockerfile
+++ b/TP1/http-server/Dockerfile
@@ -1,3 +1,5 @@
 FROM httpd:2.4
 
-COPY ./public-html/ /usr/local/apache2/htdocs/
+COPY ./httpd-reverse-proxy.conf /usr/local/apache2/conf/httpd.conf
+
+COPY ./public/ /usr/local/apache2/htdocs/
