--- a/TP1/httpd/httpd-reverse-proxy.conf
+++ b/TP1/httpd/httpd-reverse-proxy.conf
@@ -551,8 +551,8 @@ SSLRandomSeed connect builtin
 
 <VirtualHost *:80>
 ProxyPreserveHost On
-ProxyPass / http://tp1-backend:8080/
-ProxyPassReverse / http://tp1-backend:8080/
+ProxyPass / http://backend:8080/
+ProxyPassReverse / http://backend:8080/
 </VirtualHost>
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
