--- a/TP1/docker-compose.yml
+++ b/TP1/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     networks:
       - "app-network"
     volumes:
-      - "./data:/var/lib/postgresql/data"
+      - "./database/data:/var/lib/postgresql/data"
     environment:
       - POSTGRES_USER=usr
       - POSTGRES_PASSWORD=pwd
