--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,12 +10,14 @@ jobs:
   test-backend: 
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v2.5.0
+      - uses: actions/checkout@v4.1.1
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: 17
+          distribution: 'temurin'
+          architecture: x64
 
       - name: Change directory to TP1/backend folder
         run: cd TP1/backend
