--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,29 @@ jobs:
 
       - name: Build and test with Maven
         run: cd TP1/backend && mvn clean verify
+
+  build-and-push-docker-image:
+    needs: test-backend
+    runs-on: ubuntu-22.04
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4.1.1
+
+      - name: Build image and push backend
+        uses: docker/build-push-action@v5.1.0
+        with:
+          context: ./TP1/backend
+          tags:  ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-backend:latest
+
+      - name: Build image and push database
+        uses: docker/build-push-action@v5.1.0
+        with:
+          context: ./TP1/database
+          tags:  ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-database:latest
+
+      - name: Build image and push httpd
+        uses: docker/build-push-action@v5.1.0
+        with:
+          context: ./TP1/httpd
+          tags:  ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-httpd:latest
