--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,9 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
+      - name: Login to DockerHub
+        run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Checkout code
         uses: actions/checkout@v4.1.1
 
@@ -35,15 +38,18 @@ jobs:
         with:
           context: ./TP1/backend
           tags:  ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-backend:latest
+          push: ${{ github.ref == 'refs/heads/main' }}
 
       - name: Build image and push database
         uses: docker/build-push-action@v5.1.0
         with:
           context: ./TP1/database
           tags:  ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-database:latest
+          push: ${{ github.ref == 'refs/heads/main' }}
 
       - name: Build image and push httpd
         uses: docker/build-push-action@v5.1.0
         with:
           context: ./TP1/httpd
           tags:  ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-httpd:latest
+          push: ${{ github.ref == 'refs/heads/main' }}
