--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
 
 jobs:
-  test-backend: 
+  install:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4.1.1
@@ -19,24 +19,17 @@ jobs:
           distribution: 'temurin'
           architecture: x64
 
+  test-backend:
+    needs: install
+    runs-on: ubuntu-22.04
+    steps:
       - name: Build and test with Maven
         run: cd TP1/backend && mvn clean verify
 
   sonarcloud:
-    name: Build and analyze
+    needs: install
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v4.1.1
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: 17
-          distribution: 'temurin'
-          architecture: x64
-
       - name: Cache SonarCloud packages
         uses: actions/cache@v4
         with:
@@ -57,15 +50,14 @@ jobs:
         run: cd TP1/backend && mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=cpe-devops-leon-dumestre
 
   build-and-push-docker-image:
-    needs: test-backend
+    needs:
+      - test-backend
+      - sonarcloud
     runs-on: ubuntu-22.04
 
     steps:
       - name: Login to DockerHub
         run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Checkout code
-        uses: actions/checkout@v4.1.1
 
       - name: Build image and push backend
         uses: docker/build-push-action@v5.1.0
