--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,8 @@ jobs:
   install:
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v4.1.1
+      - name: Checkout repository
+        uses: actions/checkout@v4.1.1
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -23,6 +24,16 @@ jobs:
     needs: install
     runs-on: ubuntu-22.04
     steps:
+    - name: Checkout repository
+        uses: actions/checkout@v4.1.1
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: 'temurin'
+          architecture: x64
+          
       - name: Build and test with Maven
         run: cd TP1/backend && mvn clean verify
 
