--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI devops 2024
+name: CI devops
 on:
   push:
     branches:
@@ -22,23 +22,15 @@ jobs:
 
   test-backend:
     needs: install
+    extends: install
     runs-on: ubuntu-22.04
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4.1.1
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: 17
-          distribution: 'temurin'
-          architecture: x64
-        
       - name: Build and test with Maven
         run: cd TP1/backend && mvn clean verify
 
   sonarcloud:
     needs: install
+    extends: install
     runs-on: ubuntu-22.04
     steps:
       - name: Cache SonarCloud packages
@@ -64,6 +56,7 @@ jobs:
     needs:
       - test-backend
       - sonarcloud
+    extends: install
     runs-on: ubuntu-22.04
 
     steps:
