--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,12 +22,14 @@ jobs:
 
   test-backend:
     needs: install
+    runs-on: ubuntu-22.04
     steps:
       - name: Build and test with Maven
         run: cd TP1/backend && mvn clean verify
 
   sonarcloud:
     needs: install
+    runs-on: ubuntu-22.04
     steps:
       - name: Cache SonarCloud packages
         uses: actions/cache@v4
@@ -52,6 +54,7 @@ jobs:
     needs:
       - test-backend
       - sonarcloud
+    runs-on: ubuntu-22.04
     steps:
       - name: Login to DockerHub
         run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
