--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,31 +6,23 @@ on:
       - develop
   pull_request:
 
+defaults:
+  runs-on: ubuntu-22.04
+  steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4.1.1
+
 jobs:
-  install:
+  test-backend:
     runs-on: ubuntu-22.04
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4.1.1
-
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: 17
           distribution: 'temurin'
           architecture: x64
-
-  test-backend:
-    needs: install
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Build and test with Maven
-        run: cd TP1/backend && mvn clean verify
-
-  sonarcloud:
-    needs: install
-    runs-on: ubuntu-22.04
-    steps:
+        
       - name: Cache SonarCloud packages
         uses: actions/cache@v4
         with:
@@ -51,9 +43,8 @@ jobs:
         run: cd TP1/backend && mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=cpe-devops-leon-dumestre
 
   build-and-push-docker-image:
-    needs:
-      - test-backend
-      - sonarcloud
+    if: github.ref == 'refs/heads/main'
+    needs: test-backend
     runs-on: ubuntu-22.04
     steps:
       - name: Login to DockerHub
