--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,67 +8,7 @@ on:
 
 jobs:
   test-backend:
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4.1.1
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: 17
-          distribution: 'temurin'
-          architecture: x64
-        
-      - name: Cache SonarCloud packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-
-      - name: Cache Maven packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-
-      - name: Build and analyze
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: cd TP1/backend && mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=cpe-devops-leon-dumestre
+    uses: ./test-backend.yml
 
   build-and-push-docker-image:
-    if: github.ref == 'refs/heads/main'
-    needs: test-backend
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4.1.1
-
-      - name: Login to DockerHub
-        run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build image and push backend
-        uses: docker/build-push-action@v5.1.0
-        with:
-          context: ./TP1/backend
-          tags:  ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-backend:latest
-          push: ${{ github.ref == 'refs/heads/main' }}
-
-      - name: Build image and push database
-        uses: docker/build-push-action@v5.1.0
-        with:
-          context: ./TP1/database
-          tags:  ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-database:latest
-          push: ${{ github.ref == 'refs/heads/main' }}
-
-      - name: Build image and push httpd
-        uses: docker/build-push-action@v5.1.0
-        with:
-          context: ./TP1/httpd
-          tags:  ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-httpd:latest
-          push: ${{ github.ref == 'refs/heads/main' }}
-      - name: Build and test with Maven
-        run: cd TP1/backend && mvn clean verify
+    uses: ./image.yml
