--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -1,8 +1,10 @@
 name: CI devops - Image
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows:
+      - 'CI devops - Test Backend'
+    types:
+      - completed
 
 jobs:
   build-and-push-docker-image:
