fix: ci workflow

--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -3,13 +3,14 @@ on:
   workflow_run:
     workflows:
       - 'CI devops - Test Backend'
+    branches: 
+      - main
     types:
       - completed
 
 jobs:
   build-and-push-docker-image:
     runs-on: ubuntu-22.04
-    needs: test-backend
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.1
