--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   build-and-push-docker-image:
     runs-on: ubuntu-22.04
+    needs: test-backend
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.1
