--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -1,12 +1,10 @@
 name: CI devops - Image
 on:
   workflow_run:
-    workflows:
-      - 'CI devops - Test Backend'
-    branches: 
-      - main
-    types:
-      - completed
+    workflows: 'CI devops - Test Backend'
+    branches:  main
+    types: completed
+    status: success
 
 jobs:
   build-and-push-docker-image:
