--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -36,3 +36,10 @@ jobs:
           context: ./TP1/httpd
           tags:  ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-httpd:latest
           push: ${{ github.ref == 'refs/heads/main' }}
+
+      - name: Build image and push front
+        uses: docker/build-push-action@v5.1.0
+        with:
+          context: ./TP3/front
+          tags:  ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-front:latest
+          push: ${{ github.ref == 'refs/heads/main' }}
