--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,8 @@ jobs:
         uses: actions/checkout@v4.1.1
 
       - name: Deploy on Ansible
-        uses: ansible/ansible-galaxy-action@v1
+        uses: dawidd6/action-ansible-playbook@v2
         with:
           playbook: TP3/ansible/playbook-deploy.yml
+          key: ${{secrets.ANSIBLE_SSH_PRIVATE_KEY}}
 
