clean playbook docker

--- a/TP3/ansible/playbook-deploy.yml
+++ b/TP3/ansible/playbook-deploy.yml
@@ -4,7 +4,9 @@
 
   roles:
     #- role: install-docker
+    - role: clean-docker
     - role: create-network
     - role: launch-database
     - role: launch-app
-    - role: launch-proxy
+    #- role: launch-proxy
+    - role: launch-front
