--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,4 +21,7 @@ jobs:
         with:
           playbook: TP3/ansible/playbook-deploy.yml
           key: ${{secrets.ANSIBLE_SSH_PRIVATE_KEY}}
+          inventory: |
+            [all]
+            leon.dumestre.takima.cloud
 
