test: remove test-backend

--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -1,9 +1,10 @@
 name: CI devops - Image
 on:
-  workflow_run:
-    workflows: 'CI devops - Test Backend'
-    branches:  main
-    types: completed
+  push:
+    branches:
+      - main
+      - develop
+  pull_request:
 
 jobs:
   build-and-push-docker-image:
