--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -1,5 +1,9 @@
 name: CI devops - Image
 on:
+  #workflow_run:
+  #  workflows: 'CI devops - Test Backend'
+  #  branches:  main
+  #  types: completed
   push:
     branches:
       - main
@@ -9,7 +13,7 @@ on:
 jobs:
   build-and-push-docker-image:
     runs-on: ubuntu-22.04
-    if: github.event.workflow_run.conclusion == 'success'
+    #if: github.event.workflow_run.conclusion == 'success'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.1
