--- a/TP3/ansible/playbook-deploy.yml
+++ b/TP3/ansible/playbook-deploy.yml
@@ -10,3 +10,7 @@
     - role: launch-app
     - role: launch-front
     - role: launch-proxy
+  
+  vars:
+    ansible_user: "{{ ANSIBLE_USER }}"
+    ansible_python_interpreter: /usr/bin/python3
