--- a/TP3/ansible/group_vars/all.yml
+++ b/TP3/ansible/group_vars/all.yml
@@ -1,4 +1,5 @@
 ANSIBLE_USER: centos
+ANSIBLE_URL: leon.dumestre.takima.cloud
 
 DATABASE_CONTAINER_NAME: database
 APP_CONTAINER_NAME: backend
@@ -13,6 +14,6 @@ NETWORK_NAME: app-network
 
 DOCKERHUB_USERNAME: leondumestre
 DOCKERHUB_APP_IMAGE: "{{ DOCKERHUB_USERNAME }}/tp-devops-backend:1.0"
-DOCKERHUB_FRONT_IMAGE: "{{ DOCKERHUB_USERNAME }}/tp-devops-front:1.0"
+DOCKERHUB_FRONT_IMAGE: "{{ DOCKERHUB_USERNAME }}/tp-devops-frontend:1.0"
 DOCKERHUB_DATABASE_IMAGE: "{{ DOCKERHUB_USERNAME }}/tp-devops-database:1.0"
 DOCKERHUB_PROXY_IMAGE: "{{ DOCKERHUB_USERNAME }}/tp-devops-httpd:1.1"
