--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -46,5 +46,5 @@ jobs:
         uses: docker/build-push-action@v5.1.0
         with:
           context: ./TP3/front
-          tags:  ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-front:1.0
+          tags:  ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-frontend:1.0
           push: ${{ github.ref == 'refs/heads/main' }}
