--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -1,14 +1,9 @@
 name: CI devops - Image
 on:
-  #workflow_run:
-  #  workflows: 'CI devops - Test Backend'
-  #  branches:  main
-  #  types: completed
-  push:
-    branches:
-      - main
-      - develop
-  pull_request:
+  workflow_run:
+    workflows: 'CI devops - Test Backend'
+    branches:  main
+    types: completed
 
 jobs:
   build-and-push-docker-image:
