--- a/TP3/ansible/inventories/setup.yml
+++ b/TP3/ansible/inventories/setup.yml
@@ -3,4 +3,4 @@ all:
    ansible_ssh_private_key_file: /home/leon/Documents/CPE/devops-ci-cd/TP3/ansible/inventories/id_rsa
  children:
    prod:
-     hosts: "{{ ANSIBLE_URL }}"
+     hosts: leon.dumestre.takima.cloud
