--- a/TP3/proxy/httpd-reverse-proxy.conf
+++ b/TP3/proxy/httpd-reverse-proxy.conf
@@ -549,10 +549,18 @@ SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
 
-<VirtualHost *:80>
+<VirtualHost *:8080>
 Header set Access-Control-Allow-Origin *
 ProxyRequests On
 ProxyPreserveHost On
 ProxyPass / http://{{ APP_CONTAINER_NAME }}:8080/
 ProxyPassReverse / http://{{ APP_CONTAINER_NAME }}:8080/
+</VirtualHost>
+
+<VirtualHost *:80>
+Header set Access-Control-Allow-Origin *
+ProxyRequests On
+ProxyPreserveHost On
+ProxyPass / http://{{ FRONT_CONTAINER_NAME }}:8000/
+ProxyPassReverse / http://{{ FRONT_CONTAINER_NAME }}:8000/
 </VirtualHost>
