--- a/TP3/proxy/httpd-reverse-proxy.conf
+++ b/TP3/proxy/httpd-reverse-proxy.conf
@@ -549,16 +549,13 @@ SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
 
-<VirtualHost *:8080>
-Header set Access-Control-Allow-Origin *
-ProxyPreserveHost On
-ProxyPass / http://{{ APP_CONTAINER_NAME }}:8080/
-ProxyPassReverse / http://{{ APP_CONTAINER_NAME }}:8080/
-</VirtualHost>
+LoadModule proxy_module modules/mod_proxy.so
+LoadModule proxy_http_module modules/mod_proxy_http.so
 
 <VirtualHost *:80>
 Header set Access-Control-Allow-Origin *
+ProxyRequests On
 ProxyPreserveHost On
-ProxyPass / http://{{ FRONT_CONTAINER_NAME }}:8000/
-ProxyPassReverse / http://{{ FRONT_CONTAINER_NAME }}:8000/
+ProxyPass / http://${APP_CONTAINER_NAME}:8080/
+ProxyPassReverse / http://${APP_CONTAINER_NAME}:8080/
 </VirtualHost>
