--- a/TP3/ansible/playbook-deploy.yml
+++ b/TP3/ansible/playbook-deploy.yml
@@ -12,4 +12,4 @@
   
   vars:
     ansible_user: "{{ ANSIBLE_USER }}"
-    ansible_python_interpreter: /usr/bin/python3
+    #ansible_python_interpreter: /usr/bin/python3
