fix: ports & update read me

--- a/TP3/proxy/httpd-reverse-proxy.conf
+++ b/TP3/proxy/httpd-reverse-proxy.conf
@@ -553,9 +553,11 @@ LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
 
 <VirtualHost *:80>
-Header set Access-Control-Allow-Origin *
-ProxyRequests On
-ProxyPreserveHost On
-ProxyPass / http://${APP_CONTAINER_NAME}:8080/
-ProxyPassReverse / http://${APP_CONTAINER_NAME}:8080/
+    Header set Access-Control-Allow-Origin *
+    ProxyRequests On
+    ProxyPreserveHost On
+    ProxyPass "/api" "http://backend:8080"
+    ProxyPassReverse "/api" "http://backend:8080"
+    ProxyPass / http://front:80/
+    ProxyPassReverse / http://front:80/
 </VirtualHost>
